# litebot

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  bot.py  pyproject.toml
.github/workflows/: copilot-setup-steps.yml
builtin/assets/twemoji/: LICENSE-GRAPHICS
builtin/plugins/: anti_miniapp.py  drasl.py  exception_report.py  group_notice.py  help.py  login_notice.py  mute.py  ntfy.py  ping.py  service.py  withdraw.py
builtin/plugins/b23extract/: __init__.py  card.py  config.py  filter.py  formatter.py  parser.py
builtin/plugins/mcping/: __init__.py  card.py  config.py  formatter.py  protocol.py  storage.py
builtin/utils/: command.py  emoji_render.py  i18n.py  image_common.py  storage.py
tools/: test_bili_card.py  test_mc_card.py
