[project]
name = "litebot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp~=3.13.5",
    "bilibili-api-python~=17.4.1",
    "defusedxml~=0.7.1",
    "mcstatus~=13.0.1",
    "nonebot-adapter-onebot~=2.4.6",
    "nonebot2[fastapi]~=2.5.0",
    "Pillow~=12.2.0",
    "qrcode~=8.2",
]
